# Copyright 2022 Arm Limited and/or its affiliates <open-source-office@arm.com>

[package]
name = "ili9488-rs"
version = "0.1.0"
description = "A platform agnostic driver to interface with the ILI9488 TFT LCD display"
authors = ["Dash Campbell"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "display", "LCD"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DashCampbell/ili9488-rs"
edition = "2021"


[dependencies]
display-interface = "0.5"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"

[dev-dependencies]
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32l432kc",
    "time-driver-any",
    "exti",
] }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3"
embassy-embedded-hal = { version = "0.3.1" }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "task-arena-size-16384",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

display-interface-spi = { version = "0.5" }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
profont = "0.7.0"
itoa = "1.0.15"


[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
opt-level = 'z'
